# kleister-nda-preprocessing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: data_loader.py
src/nda/: __init__.py  data_loader.py  data_processor.py  document_relocator.py  label_converter.py  label_transformer.py  main.py  schema.py  utils.py
src/nda/notebooks/: data-loader.ipynb  data-processor.ipynb  eda.ipynb  label-converter.ipynb  label-transformer.ipynb
src/nda/static/outputs/dev-0/: dataset.tsv.xz
src/nda/static/outputs/test-A/: dataset.tsv.xz
src/nda/static/outputs/train/: dataset.tsv.xz
src/notebooks/: data-loader.ipynb  eda.ipynb  plan.ipynb
tests/: test_data_loader.py  test_label_transformer.py  test_schema.py  test_utils.py
