[project]
name = "nda"
version = "0.1.2"
description = "Processing and formatting data from the Kleister NDA dataset for KIE tasks with LLMs."
readme = "README.md"
authors = [
    { name = "Gabriel Fuentes", email = "gafnts@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
]

[project.scripts]
nda = "nda.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

[tool.hatch.build.targets.wheel]
packages = ["src/nda"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.mypy]
plugins = ["pydantic.mypy"]
