[project]
name = "nda"
version = "0.1.3"
description = "Processing and formatting data from the Kleister NDA dataset for KIE tasks with LLMs."
readme = "README.md"
authors = [
    { name = "Gabriel Fuentes", email = "gafnts@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
nda = "nda.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

[tool.hatch.build.targets.wheel]
packages = ["src/nda"]

[tool.ruff]
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "G", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_expr = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["src/nda/main.py"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
